# VcpkgKompute

./: README.md  configure_ninja.sh  configure_release.sh  vcpkg.json
ports/kompute/: portfile.cmake  usage  vcpkg.json
src/: CMakeLists.txt  main.cpp
